Adjusted all colors for table statuses; Fixed table + cell widths and alignments;

--- a/src/app/pages/activity-table/activity-table.component.scss
+++ b/src/app/pages/activity-table/activity-table.component.scss
@@ -115,7 +115,7 @@
               align-items: center;
               bottom: 0;
               top: 45px;
-              width: 85%;
+              width: 100%;
               @media screen and (max-width: 1280px) {
                 width: 95%;
               }
@@ -146,9 +146,8 @@
           .mat-mdc-cell {
             color: var(--gray-900);
             position: relative;
-            // border-top: 0 !important;
+            border-top: 0 !important;
             border-color: #495be3;
-            padding: 0;
             max-width: 15vw;
             @media screen and (max-width: 1280px) {
               max-width: max-content;
@@ -191,6 +190,19 @@
               display: flex;
               align-items: center;
               justify-content: center;
+              width: 100%;
+              @media screen and (min-width: 1280px) {
+                font-size: small;
+              }
+              .company {
+                @media screen and (min-width: 1280px) {
+                  width: 100%;
+                }
+              }
+              .status {
+                font-weight: 600;
+                width: 100%;
+              }
               @media screen and (max-width: 1280px) {
                 min-width: 220px;
                 text-align: justify;
@@ -208,18 +220,25 @@
                 }
               }
               .positions {
-                //! From here >> finish maintenance
+                display: flex;
+                justify-content: center;
+                .type {
+                  width: min-content;
+                  position: relative;
+                  right: 8px;
+                }
                 .stacks {
-                  text-align: center;
-                  margin: 0 auto 0 15px;
-                  display: flex;
+                  border: 1px solid;
+                  box-shadow: inset 0 0 2px 0px;
                   flex-flow: column;
-                  align-items: center;
-                  justify-content: flex-start;
-                  max-height: 58px;
+                  max-height: 50px;
+                  padding: 0 15px;
                   overflow-y: auto;
+                  position: relative;
+                  scrollbar-width: none;
+                  left: 1vw;
                   p {
-                    text-align: left;
+                    text-align: center;
                   }
                 }
                 @media screen and (max-width: 1280px) {
@@ -228,11 +247,10 @@
               }
             }
             .overflow-cell {
-              overflow-y: auto;
-              word-break: break-all;
-
+              max-width: 100%;
+              max-height: 60px;
+              overflow: auto;
               margin: auto;
-              width: 100%;
             }
             .overflow-cell-unflex {
               align-items: unset !important;
